# one-person-lab

./: .agent-contract-baseline.json  .fallowrc.json  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  TASTE.md  install.sh  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.sentrux/: baseline.json
contracts/: README.md  (+2 more)
python/opl-harness-shared/: README.md  pyproject.toml
python/opl-harness-shared/src/opl_harness_shared/: __init__.py  artifact_lifecycle.py  automation_companions.py  editable_consumer_bootstrap.py  editable_consumer_launcher.py  editable_dependency_bootstrap.py  family_action_catalog.py  family_entry_contracts.py  family_orchestration.py  family_product_entry_preset.py  family_shared_release.py  hermes_supervision.py  managed_runtime.py  owner_evidence.py  product_entry_companions.py  product_entry_program_companions.py  runtime_registration.py  runtime_task_companions.py  schema_validation.py  skill_catalog.py  status_narration.py  workspace_boundary.py
python/opl-harness-shared/tests/: test_automation_companions.py  test_editable_consumer_bootstrap.py  test_editable_consumer_launcher.py  test_editable_dependency_bootstrap.py  test_family_action_catalog.py  test_family_entry_contracts.py  test_family_orchestration.py  test_family_shared_release.py  test_hermes_supervision.py  test_managed_runtime.py  test_owner_closure_primitives.py  test_product_entry_companions.py  test_product_entry_program_companions.py  test_runtime_task_companions.py  test_skill_catalog.py  test_status_narration.py  test_workspace_boundary.py
(+4080 files in other folders)
